test/files/neg/t0903.scala
object Test {
  val x = 1
  x += 1
  x = 2
}
